--- a/composer.json
+++ b/composer.json
@@ -27,16 +27,16 @@
         "php": "^7.2 || ^8.0",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "~2.0|~3.0",
-        "symfony/framework-bundle": "~3.4|^4.3|^5.0",
-        "symfony/asset": "~3.4|^4.3|^5.0",
-        "symfony/dependency-injection": "~3.4|^4.3|^5.0",
-        "symfony/routing": "~3.4|^4.3|^5.0",
-        "symfony/security-bundle": "~3.4|^4.3|^5.0",
-        "symfony/yaml": "~3.4|^4.3|^5.0",
-        "symfony/form": "~3.4|^4.3|^5.0",
-        "symfony/validator": "~3.4|^4.3|^5.0",
-        "symfony/twig-bundle": "~3.4|^4.3|^5.0",
-        "symfony/twig-bridge": "~3.4|^4.3|^5.0",
+        "symfony/framework-bundle": "~3.4|^4.3|^5.0|^6.0",
+        "symfony/asset": "~3.4|^4.3|^5.0|^6.0",
+        "symfony/dependency-injection": "~3.4|^4.3|^5.0|^6.0",
+        "symfony/routing": "~3.4|^4.3|^5.0|^6.0",
+        "symfony/security-bundle": "~3.4|^4.3|^5.0|^6.0",
+        "symfony/yaml": "~3.4|^4.3|^5.0|^6.0",
+        "symfony/form": "~3.4|^4.3|^5.0|^6.0",
+        "symfony/validator": "~3.4|^4.3|^5.0|^6.0",
+        "symfony/twig-bundle": "~3.4|^4.3|^5.0|^6.0",
+        "symfony/twig-bridge": "~3.4|^4.3|^5.0|^6.0",
         "twig/twig": "~2.0|~3.0",
         "phpoption/phpoption": "~1.1",
         "doctrine/annotations": "~1.0"
