--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "require": {
         "php": "^7.2",
         "friendsofsymfony/rest-bundle": "~2.6",
-        "jms/serializer-bundle": "~2.0|~3.0",
+        "jms/serializer-bundle": "~2.0|~3.0|~4.0",
         "symfony/framework-bundle": "~3.4|^4.3",
         "symfony/asset": "~3.4|^4.3",
         "symfony/dependency-injection": "~3.4|^4.3",
